--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Remote Year</title>
+  <link href='https://fonts.googleapis.com/css?family=Biryani:300,200,400,600,700,800,900' rel='stylesheet' type='text/css'>
 </head>
 <body>
 
